--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-
-
-
-
 Flask==1.1.1
 gunicorn==19.9.0
 itsdangerous==1.1.0
@@ -13,4 +9,4 @@ scipy>=0.15.1
 scikit-learn>=0.18
 matplotlib>=1.4.3
 pandas>=0.19
-nltk==3.3
+nltk>=3.4.5
